Change Log
==============
2015/06/29 (IBM_DB adapter 2.6.0, driver 2.6.0)
  - Enhanced installation for Windows to pull IBM Data Server Driver automatically on first use  if not present
  - Enhanced installation for Mac OS to pull IBM Data Server Driver automatically if not present
  - Removed support for Ruby 1.9.3
  
2015/06/08 (IBM_DB adapter 2.5.27, driver 2.5.27)
  - Support for Ruby  2.2.x on Windows and Linux platform
  - Fixed bug#28 Create table fails on db:migrate task in ActiveRecord 4.2.1 if database adapter not support foreign_keys.

2015/04/08 (IBM_DB adapter 2.5.26, driver 2.5.26)
  - Fixed bug#22 - Error 'undefined method lookup_cast_type encountered' with rails version lesser than 4.2

2015/03/24 (IBM_DB adapter 2.5.25, driver 2.5.25)
  - Support for Rails 4.2.x
  - Support for Ruby  2.2.x on Windows and Linux platform

2014/08/03 (IBM_DB adapter 2.5.18, driver 2.5.14) :
  - Support for Rails 4.1.x
  - Enhanced installation to pull IBM Data Server Driver automatically if not present

2014/03/03 (IBM_DB adapter 2.5.17, driver 2.5.14) :
  - Shipping binaries compatible with Ruby 2.0 for linux x86_64 systems (#29871)
  - Fixed #29869
  - Support microsecond timestamp.

2014/02/26 (IBM_DB adapter 2.5.16, driver 2.5.14) :
  - Yanked version 2.5.15. Hence using new version number

2014/02/17 (IBM_DB adapter 2.5.15, driver 2.5.14) :
  - Yanked version 2.5.14. Hence using new version number

2014/02/11 (IBM_DB adapter 2.5.14, driver 2.5.14) :
  - Support for Rails 4
  - Support for ruby-2.0
  
2014/01/28 (IBM_DB adapter 2.5.12, driver 2.5.11) :
  - Supporting usage of name ibmdb as adapter along with current name ibm_db to support requirements of cloud environments

2012/12/07 (IBM_DB adapter 2.5.11, driver 2.5.11) :
  - Fixed bug #29633 - Deletes cause too many handles to be consumed and not freed
  - Support for Mac OS CLI library loading to check create and drop db functionality - #29625