@@ -1,5 +1,5 @@
 =====================================================================
-README for the IBM_DB Adapter (2.6.0) and Driver (2.6.0) (2015/06/29)
+README for the IBM_DB Adapter (2.6.1) and Driver (2.6.1) (2015/07/14)
 For ActiveRecord Version >= 1.15.5 (and Rails >= 1.2.5)
 =====================================================================
 
